infra/k8s/fastapi/ingress.yaml
## fastapi domain : ajouter remplacement dans readme

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - fastapi.domain.com
      secretName: fastapi-tls
  rules:
    - host: fastapi.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 8000
